Add feature showcase documentation and optimize color balance performance
- Add comprehensive feature showcase section to README files with visual examples
- Rename Chinese image filenames to English for better accessibility
- Optimize RC_ColorBalance node performance with vectorized operations and reduced memory usage
- Update documentation with professional feature demonstrations

--- a/locales/en/nodeDefs.json
+++ b/locales/en/nodeDefs.json
@@ -850,5 +850,14 @@
         "tooltip": "Preserve original image luminosity when mapping colors (maintains original brightness)"
       }
     }
+  },
+  "_categories": {
+    "RC/Image": "RC/Image",
+    "RC/Adjustments": "RC/Adjustments",
+    "RC/Filters": "RC/Filters",
+    "RC/Generate": "RC/Generate",
+    "RC/Layer Effects": "RC/Layer Effects",
+    "RC/Utilities": "RC/Utilities",
+    "RC/Channel": "RC/Channel"
   }
 }
