Add three new adjustment nodes with performance optimizations
- Add RC_Threshold node with vectorized operations and multiple calculation methods
- Add RC_Vibrance node with adjustable skin tone protection and enhanced HSV processing
- Add RC_AddNoise node with 5 noise types including gaussian blur variant
- Optimize all three nodes for high performance using vectorized NumPy operations
- Complete localization support for all new nodes and parameters
- Fix menu category translations for proper internationalization

--- a/locales/en/main.json
+++ b/locales/en/main.json
@@ -4,6 +4,15 @@
     "RC/Layer Effects": "RC/Layer Effects",
     "RC/Filters": "RC/Filters",
     "RC/Adjustments": "RC/Adjustments",
-    "RC/Utilities": "RC/Utilities"
+    "RC/Utilities": "RC/Utilities",
+    "RC/Channel": "RC/Channel",
+    "RC/Generate": "RC/Generate",
+    "Image": "RC/Image",
+    "Layer Effects": "RC/Layer Effects",
+    "Filters": "RC/Filters",
+    "Adjustments": "RC/Adjustments",
+    "Utilities": "RC/Utilities",
+    "Channel": "RC/Channel",
+    "Generate": "RC/Generate"
   }
 }
